# SPECTRE

./: .gitignore  Dockerfile.pipeline  Makefile  README.md  commit.sh  docker-compose.yml
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx
client/src/app/engine/: page.tsx
client/src/components/: AlertFeed.tsx  Dashboard.tsx  EngineDiagnostics.tsx  Header.tsx  NervePanel.tsx  SpectreGraph.tsx
client/src/hooks/: useSpectre.ts
client/src/lib/: types.ts  utils.ts
engine/: CMakeLists.txt
engine/include/spectre/: detector.hpp  entropy.hpp  graph.hpp  types.hpp
engine/src/: bindings.cpp  detector.cpp  entropy.cpp  graph.cpp
pipeline/: main.py  requirements.txt
pipeline/spectre/: __init__.py  config.py  crypto.py  ingestor.py  processor.py  ws_server.py
